--- a/src/menus/css/menus.css
+++ b/src/menus/css/menus.css
@@ -3,19 +3,16 @@
 
 /* MAIN MENU STYLING */
 
-/* EAP - add ul for children */
-.pure-menu.pure-menu-open,
-.pure-menu.pure-menu-horizontal li .pure-menu-children > ul {
-    background: #fff; /* Old browsers */
+/* EAP - add ul for children, remove pure-menu prefix to horizontal */
+
+/* EAP
+   Default style for  any menu.
+
+*/
+.pure-menu {
+    background-color: #fff; /* Old browsers */
     border: 1px solid #b7b7b7;
 }
-
-/* remove borders for horizontal menus */
-.pure-menu.pure-menu-horizontal,
-.pure-menu.pure-menu-horizontal .pure-menu-heading {
-    border: none;
-}
-
 
 /* LINK STYLES */
 
@@ -23,13 +20,14 @@
     border: 1px solid transparent;
     border-left: none;
     border-right: none;
-
 }
+
 
 /* EAP - the second children one is wrong -- can-have-children is ON the li; need to look at later
 correct the li to a  */
 .pure-menu a,
 .pure-menu .pure-menu-can-have-children > a:after {
+    xxackground-color: #ffffff;
     color: #777;
 }
 
@@ -38,8 +36,11 @@ correct the li to a  */
 }
 
 /* Focus style for a dropdown menu-item when the parent has been opened */
-.pure-menu .pure-menu-children.pure-menu-open > ul {
-    background: #dedede;
+/* EAP
+   Focus, or default?
+*/
+.pure-menu .pure-menu-children > ul {
+    background: #ffffff;
 }
 
 
@@ -58,6 +59,14 @@ correct the li to a  */
     color: #bfbfbf;
 }
 
+/* EAP 
+***********************
+States 
+************************/
+
+/* EAP
+   Disabled state
+*/
 .pure-menu .pure-menu-disabled > a {
     background-image: none;
     border-color: transparent;
@@ -68,6 +77,20 @@ correct the li to a  */
 .pure-menu .pure-menu-can-have-children.pure-menu-disabled > a:after {
     color: #bfbfbf;
 }
+
+/* ACTIVE MENU ITEM */
+/* EAP
+   Applied to any a Selected (aka Active) menu item.
+   Can we define Selected?
+   The item the user most recently clicked on.
+   Also, now only select the most immediate button as. 
+   The scripting will set the container for the button 
+   
+*/
+.pure-menu .pure-menu-selected > a {
+    color: #000;
+}
+
 
 /* HEADINGS */
 .pure-menu .pure-menu-heading {
@@ -80,13 +103,44 @@ correct the li to a  */
     border-bottom-color: #dfdfdf;
 }
 
-/* ACTIVE MENU ITEM */
-.pure-menu .pure-menu-selected a {
-    color: #000;
+
+
+
+/* EAP
+   Default style for horizontal sub menus.
+   Disentagled from pure-menu.
+*/
+.pure-menu-horizontal li .pure-menu-children > ul {
+    background: #fff; /* Old browsers */
+    border: 1px solid #b7b7b7;
 }
 
+
+/* EAP
+   Default styles for horizontal menu (override pure-menu).
+*/
+/* remove borders for horizontal menus */
+.pure-menu-horizontal {
+    border: none;
+}
+
+/* EAP
+   Disentagle from above.
+*/
+.pure-menu-horizontal .pure-menu-heading {
+    border: none;
+}
+
+
+
 /* FIXED MENU */
-.pure-menu.pure-menu-open.pure-menu-fixed {
+.pure-menu.pure-menu-fixed {
     border: none;
     border-bottom: 1px solid #b7b7b7;
 }
+
+/* EAP popdown */
+.pure-menu-popdown > .pure-menu-children > ul > .pure-menu-has-children > .pure-menu-children > ul {
+	background-color: #FFFFFF;
+}
+
